# dotfiles

./: .gtkrc-2.0  README.md  install.sh  install_dependencies.sh
.config/: Trolltech.conf  dolphinrc  gtkrc  gtkrc-2.0  katerc  kcminputrc  kdeglobals  ksplashrc  kwinrc  starship.toml
.config/Kvantum/: Dracula  Dracula-Solid  Dracula-purple  Dracula-purple-solid
.config/alacritty/: alacritty.toml  dracula.toml
.config/dconf/: user
.config/dunst/: dunstrc
.config/dunst/dracula/: dunstrc
.config/fish/: config.fish  fish_variables
.config/garuda-pkgbuilds/garuda-starship-prompt/: starship.toml
.config/gtk-3.0/: settings.ini
.config/gtk-4.0/: gtk.css  settings.ini
.config/hypr/: hyprland.conf  nvidia.conf
.config/kdedefaults/: kdeglobals
.config/nvim/: init.lua
.config/nvim-latex/: init.lua
.config/nvim-latex/lua/: git-conf.lua
.config/nvim-web/: init.lua
.config/nvim-web/lua/: cmp-conf.lua  lsp-conf.lua  plugins.lua  telescope-conf.lua  theming-conf.lua  treesitter-conf.lua
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf
.config/rofi/: config.rasi
.config/tmux/: tmux.conf
.config/waybar/: config  inspiration  style.css
.config/xsettingsd/: xsettingsd.conf
.config/yazi/: yazi.toml
.icons/: Dracula-cursors  Dracula_hyprcursor  Tela-circle-dracula  Tela-circle-dracula-dark  Tela-circle-dracula-light
.local/share/: color-schemes
Laptop-patches/: 0001-Waybar-Laptop-patch-battery-module-display.patch
WallRustler/: Cargo.toml  README.md
WallRustler/src/: main.rs  windows.rs
src/: lib.rs  linux.rs
(+76 files in other folders)
